@@ -18,7 +18,7 @@ librpm_a_SOURCES = \
 	formats.c fs.c header.c install.c \
 	lookup.c macro.c md5.c md5sum.c \
 	messages.c misc.c oldheader.c package.c query.c \
-	rebuilddb.c rpmdb.c rpmerr.c rpmio.c rpmlead.c \
+	rebuilddb.c rpmdb.c rpmerr.c rpmio.c rpmbzio.c rpmlead.c \
 	rpmrc.c signature.c stringbuf.c tagtable.c \
 	tread.c uninstall.c verify.c transaction.c problems.c hash.c fprint.c
 
