@@ -1,4 +1,5 @@
 2.90 -> 2.91
+	- create rpmbzio.c to avoid implicit dependence on libbz2 for installer.
 
 2.5.x -> 2.90
 	- added --excludepath
